fixes alignment issue

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -36,7 +36,9 @@
   position: relative;
   overflow: hidden;
 }
-
+.select2-container--default   {
+  margin-top:-4px;
+}
 .dropdown-menu>li>a {
   color: #354044;
 }
